# dds-gamepad

./: .clangd  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md  vcpkg.json
.codex/instructions/: cmake-vcpkg.instructions.md
.github/: generate-task-details.md  generate-tasks.md  process-task-list.md
.github/instructions/: copilot-cxx.instructions.md
Scripts/: README.md  build_dependencies.ps1  fetch_vcruntime.ps1  fetch_vigembus.ps1  install_cyclonedds.ps1  install_service.ps1
cmake/: version.cmake
config/: README.md  brake.yaml  combined.yaml  driver.yaml  gunner.yaml  steering.yaml  throttle.yaml
docs/: PRD.md  Tasks.md  architecture-review.md  doxygen-guide.md  mainpage.dox  refactor-controller.md
docs/dependencies/: dds_deps.txt  ddsc.txt  ddscxx.txt  yaml-cpp.txt
docs/work/: 256_GunnerControls.md  282_yoke_declination.md  Gamepad-IDL-Mirgration.md  WindowsService.md
idl/: Common.idl  Gamepad.idl  README.txt  Standard_types.idl  Value.idl
src/: dds-gamepad.rc  dds_includes.h  main.cpp  version.h.in  version.rc.in  vigem_sample.cpp  vigem_sanity.rc
src/app/: AppRunner.cpp  AppRunner.h  StatusPoller.cpp  StatusPoller.h  StopToken.h
src/common/: MappingDefinition.h  OutputState.h
src/config/: ConfigLoader.cpp  ConfigLoader.h
src/console/: RxTable.cpp  RxTable.h
src/emulator/: IOutputDevice.h  UdpProtobufEmulator.cpp  UdpProtobufEmulator.h  VigemClient.cpp  VigemClient.h
src/mapper/: GamepadState.h  MappingEngine.cpp  MappingEngine.h
src/service/: EventLog.cpp  EventLog.h  ServiceMain.cpp
